Replaced Arrays.asList -> List.of