@@ -15,7 +15,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -40,7 +40,7 @@ class UpsertClientMessageOperationImpl implements UpsertClientMessageOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         clientMessage.getId(),
                         clientMessage.getIdempotencyKey(),
                         clientMessage.getClientId(),
