@@ -11,7 +11,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -34,7 +34,7 @@ class UpsertLobbyRuntimeRefOperationImpl implements UpsertLobbyRuntimeRefOperati
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         lobbyRuntimeRef.getId(),
                         lobbyRuntimeRef.getIdempotencyKey(),
                         lobbyRuntimeRef.getLobbyId(),
