@@ -7,7 +7,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -30,7 +30,10 @@ class HasMatchmakerMatchOperationImpl implements HasMatchmakerMatchOperation {
                         where matchmaker_id = $1 and id = $2 and deleted = false
                         limit 1
                         """,
-                Arrays.asList(matchmakerId, id),
+                List.of(
+                        matchmakerId,
+                        id
+                ),
                 "Match");
     }
 }
