@@ -9,7 +9,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -34,7 +34,7 @@ class SelectMatchmakerMatchOperationImpl implements SelectMatchmakerMatchOperati
                         where matchmaker_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(matchmakerId, id),
+                List.of(matchmakerId, id),
                 "Match",
                 matchmakerMatchModelMapper::fromRow);
     }
