@@ -12,7 +12,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -36,7 +36,7 @@ class UpsertMatchmakerOperationImpl implements UpsertMatchmakerOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         matchmaker.getId(),
                         matchmaker.getIdempotencyKey(),
                         matchmaker.getCreated().atOffset(ZoneOffset.UTC),
