@@ -13,7 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -35,7 +35,7 @@ class DeleteRuntimeOperationImpl implements DeleteRuntimeOperation {
                         set modified = $2, deleted = true
                         where id = $1 and deleted = false
                         """,
-                Arrays.asList(
+                List.of(
                         id,
                         Instant.now().atOffset(ZoneOffset.UTC)
                 ),
