@@ -7,7 +7,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -31,7 +31,7 @@ class HasRuntimeClientOperationImpl implements HasRuntimeClientOperation {
                             runtime_id = $1 and client_id = $2 and deleted = false
                         limit 1
                         """,
-                Arrays.asList(runtimeId, clientId),
+                List.of(runtimeId, clientId),
                 "Runtime client");
     }
 }
