@@ -9,7 +9,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -34,7 +34,7 @@ class SelectRuntimeClientOperationImpl implements SelectRuntimeClientOperation {
                         where runtime_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(
+                List.of(
                         runtimeId,
                         id
                 ),
