@@ -10,7 +10,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -39,7 +39,7 @@ class SelectRuntimePermissionByRuntimeIdAndUserIdOperationImpl implements
                         order by id desc
                         limit 1
                         """,
-                Arrays.asList(runtimeId, userId, permission),
+                List.of(runtimeId, userId, permission),
                 "Runtime permission",
                 runtimePermissionModelMapper::fromRow);
     }
