@@ -8,7 +8,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -32,7 +32,7 @@ class HasTenantPermissionOperationImpl implements HasTenantPermissionOperation {
                         where tenant_id = $1 and user_id = $2 and permission = $3 and deleted = false
                         limit 1
                         """,
-                Arrays.asList(tenantId, userId, permission),
+                List.of(tenantId, userId, permission),
                 "Tenant permission");
     }
 }
