@@ -12,7 +12,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -37,7 +37,7 @@ class SelectVersionConfigOperationImpl implements SelectVersionConfigOperation {
                         where tenant_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(tenantId, versionId),
+                List.of(tenantId, versionId),
                 "Version",
                 row -> {
                     try {
