@@ -7,7 +7,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -31,7 +31,7 @@ class SelectVersionIdByStageIdOperationImpl implements SelectVersionIdByStageIdO
                         order by id desc
                         limit 1
                         """,
-                Arrays.asList(tenantId, stageId),
+                List.of(tenantId, stageId),
                 "Version",
                 row -> row.getLong("id"));
     }
