@@ -9,7 +9,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -34,7 +34,7 @@ class SelectVersionMatchmakerRequestOperationImpl implements SelectVersionMatchm
                         where tenant_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(tenantId, id),
+                List.of(tenantId, id),
                 "Version matchmaker request",
                 versionMatchmakerRequestModelMapper::fromRow);
     }
