@@ -13,7 +13,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -38,7 +38,7 @@ class UpsertStageOperationImpl implements UpsertStageOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         stage.getId(),
                         stage.getIdempotencyKey(),
                         stage.getTenantId(),
