@@ -11,7 +11,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -35,7 +35,7 @@ class UpsertStagePermissionOperationImpl implements UpsertStagePermissionOperati
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         stagePermission.getId(),
                         stagePermission.getIdempotencyKey(),
                         stagePermission.getTenantId(),
