@@ -17,7 +17,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -42,7 +42,7 @@ class UpsertVersionOperationImpl implements UpsertVersionOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         version.getId(),
                         version.getIdempotencyKey(),
                         version.getTenantId(),
