@@ -13,7 +13,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -39,7 +39,7 @@ class SelectPlayerAttributesOperationImpl implements SelectPlayerAttributesOpera
                         where user_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(userId, playerId),
+                List.of(userId, playerId),
                 "Player attributes",
                 row -> {
                     try {
