@@ -10,7 +10,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -37,7 +37,7 @@ class SelectPlayerByUserIdAndStageIdOperationImpl implements SelectPlayerByUserI
                         order by id desc
                         limit 1
                         """,
-                Arrays.asList(userId, stageId),
+                List.of(userId, stageId),
                 "Player",
                 playerModelMapper::fromRow);
     }
