@@ -12,7 +12,7 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -38,7 +38,7 @@ class SelectPlayerProfileOperationImpl implements SelectPlayerProfileOperation {
                         where user_id = $1 and id = $2
                         limit 1
                         """,
-                Arrays.asList(userId, playerId),
+                List.of(userId, playerId),
                 "Player profile",
                 row -> {
                     try {
