@@ -16,7 +16,7 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.IOException;
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -42,7 +42,7 @@ class UpdatePlayerAttributesOperationImpl implements UpdatePlayerAttributesOpera
                         set modified = $3, attributes = $4
                         where user_id = $1 and id = $2
                         """,
-                Arrays.asList(
+                List.of(
                         userId,
                         playerId,
                         Instant.now().atOffset(ZoneOffset.UTC),
