@@ -16,7 +16,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -43,7 +43,7 @@ class UpsertPlayerOperationImpl implements UpsertPlayerOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         player.getId(),
                         player.getIdempotencyKey(),
                         player.getUserId(),
