@@ -12,6 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.time.ZoneOffset;
 import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @ApplicationScoped
@@ -35,7 +36,7 @@ class UpsertTokenOperationImpl implements UpsertTokenOperation {
                         on conflict (id) do
                         nothing
                         """,
-                Arrays.asList(
+                List.of(
                         token.getId(),
                         token.getIdempotencyKey(),
                         token.getUserId(),
